@@ -44,4 +44,5 @@ September 23rd, 2022
 	- Added explosion when moonlight projectile hits
 	- Moonlight Greatsword Fully Implimented!!!
 	- Added Fireball.png and Fireball.cs
-	- 
+September 26, 2022
+	-Added Fireball_Projectile.png and Fireball_Projectile.cs
